Some bug squashing and adding a default root node

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body {
     justify-content: space-between;
     overflow: hidden;
     padding: 3rem 0;
-    width: 30rem;
+    width: 0;
     height: 100%;
     top: 0;
     right: 0;
